Changed mobile nav bar title

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -25,7 +25,7 @@
               stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </button>
-        <span class="font-semibold">My App</span>
+        <span class="font-semibold">Ego Docs</span>
         <div class="w-10"></div>
       </div>
     </header>
